--- a/views/admin.html
+++ b/views/admin.html
@@ -153,14 +153,14 @@
             </div>
           </div>
           <div class="control-group">
-            <label class="control-label" for="add-user"></label>
+            <label class="control-label" for="add-app"></label>
             <div class="controls">
-              <button id="add-user" type="button" name="add-user" class="btn btn-success">Add User</button>
+              <button id="add-app" type="button" name="add-app" class="btn btn-success">Add App</button>
             </div>
           </div>
           <div class="control-group">
-            <label for="user-result" class="control-label"></label>
-            <textarea id="user-result" class="input-xlarge"></textarea>
+            <label for="app-result" class="control-label"></label>
+            <textarea id="app-result" class="input-xlarge"></textarea>
           </div>
         </fieldset>
       </form>
