admin page updates

--- a/views/admin.html
+++ b/views/admin.html
@@ -153,6 +153,12 @@
             </div>
           </div>
           <div class="control-group">
+            <label class="control-label" for="app-domain">Domain:</label>
+            <div class="controls">
+              <input id="app-domain" name="app-domain" placeholder="Domain" class="input-large" type="text">
+            </div>
+          </div>
+          <div class="control-group">
             <label class="control-label" for="add-app"></label>
             <div class="controls">
               <button id="add-app" type="button" name="add-app" class="btn btn-success">Add App</button>
